# navajo

./: CMakeLists.txt  README.md  main.cpp
src/: answer_generator.cpp  answer_generator.hpp  common.cpp  common.hpp  main.cpp  query_parser.cpp  query_parser.hpp
src/helper/: helper.cpp
src/server/: answer_generator.cpp  answer_generator.hpp  common.cpp  common.hpp  config_reader.cpp  config_reader.hpp  main.cpp  query_parser.cpp  query_parser.hpp  url_encoder.cpp  url_encoder.hpp
sys/: navajo.conf  navajo.service
test/: counter  performance  receive  send  variables
