cmake_minimum_required(VERSION 3.0)
project(navajo CXX)
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wpedantic")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g3 -fsanitize=undefined -fsanitize=address")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -fno-unwind-tables -fno-asynchronous-unwind-tables -fno-exceptions -fno-rtti -fno-ident -Wl,--gc-sections,--strip-all,--build-id=none")
if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
endif()
file(GLOB HEADERS src/*.hpp)
file(GLOB SOURCES src/*.cpp)
add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
